...
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/browseProfiles"
        android:title="Profiles"
        android:icon="@drawable/ic_people_foreground"/>
    <item
        android:id="@+id/browseFacilities"
        android:title="Facilities"
        android:icon="@drawable/facility_icon"/>
    <item
        android:id="@+id/browseEvents"
        android:title="Events"
        android:icon="@drawable/ic_smile_foreground"/>
...
